--- a/covertitore-binario-decimale/convertitore.html
+++ b/covertitore-binario-decimale/convertitore.html
@@ -48,11 +48,11 @@
 </body>
 
 <script>
-    let esadecimale = document.querySelector("#esa");
-    let decimale = document.querySelector("#dec");
-    let ottale = document.querySelector("#oct");
-    let binario = document.querySelector("#bin");
-    let converti = document.querySelector("#converti");
+    const esadecimale = document.querySelector("#esa");
+    const decimale = document.querySelector("#dec");
+    const ottale = document.querySelector("#oct");
+    const binario = document.querySelector("#bin");
+    const converti = document.querySelector("#converti");
 
     esadecimale.addEventListener("change", dec2esa, true);
     decimale.addEventListener("change", dec2dec, true);
